--- a/wslPath/index.html
+++ b/wslPath/index.html
@@ -27,11 +27,16 @@
 <a href="https://akikuno.github.io/wslPath/wslPath/main.html"><img alt="Docs" src="https://img.shields.io/badge/Docs-passing-informational.svg?style=flat-square&amp;color=brightgreen"></a>
 <a href="https://github.com/akikuno/wslPath/actions"><img alt="Test" src="https://img.shields.io/github/workflow/status/akikuno/wslPath/Pytest?json&amp;label=Test&amp;color=brightgreen&amp;style=flat-square"></a>
 <a href="https://pypi.org/project/wslPath/"><img alt="Python" src="https://img.shields.io/pypi/pyversions/wslPath.svg?label=Python&amp;color=blue&amp;style=flat-square"></a>
-<a href="https://pypi.org/project/wslPath/"><img alt="PyPI" src="https://img.shields.io/pypi/v/wslPath.svg?label=PyPI&amp;color=orange&amp;style=flat-square"></a></p>
+<a href="https://pypi.org/project/wslPath/"><img alt="PyPI" src="https://img.shields.io/pypi/v/wslPath.svg?label=PyPI&amp;color=orange&amp;style=flat-square"></a>
+<a href="https://anaconda.org/conda-forge/wslpath"><img alt="Conda" src="https://img.shields.io/conda/v/conda-forge/wslPath?label=Conda&amp;color=orange&amp;style=flat-square"></a></p>
 <h1 id="wslpath">wslPath</h1>
 <p><code><a title="wslPath" href="#wslPath">wslPath</a></code> is a Python module to convert between Windows and POSIX path in WSL</p>
 <h2 id="install">Install</h2>
+<p>From <a href="https://pypi.org/project/wslPath/">PyPI</a>:</p>
 <pre><code class="language-python">pip install wslPath
+</code></pre>
+<p>From <a href="https://anaconda.org/conda-forge/wslpath">Conda</a>:</p>
+<pre><code class="language-python">conda install -c conda-forge wslPath
 </code></pre>
 <h2 id="usages">Usages</h2>
 <pre><code class="language-python">import wslPath
