deploy: 2abe9394a298dac2bfd43dcac496658c02c15bad

--- a/wslPath/index.html
+++ b/wslPath/index.html
@@ -27,7 +27,7 @@ hljs.highlightAll();
 </header>
 <section id="section-intro">
 <p><a href="https://choosealicense.com/licenses/mit/"><img alt="Licence" src="https://img.shields.io/badge/License-MIT-9cf.svg?style=flat-square"></a>
-<a href="https://akikuno.github.io/wslPath/wslPath/main.html"><img alt="Docs" src="https://img.shields.io/badge/Docs-passing-informational.svg?style=flat-square&amp;color=brightgreen"></a>
+<a href="https://github.com/akikuno/wslPath/actions"><img alt="Test" src="https://img.shields.io/github/actions/workflow/status/akikuno/wslPath/ci.yml?branch=main&amp;label=Test&amp;color=brightgreen"></a>
 <a href="https://pypi.org/project/wslPath/"><img alt="Python" src="https://img.shields.io/pypi/pyversions/wslPath.svg?label=Python&amp;color=blue&amp;style=flat-square"></a>
 <a href="https://pypi.org/project/wslPath/"><img alt="PyPI" src="https://img.shields.io/pypi/v/wslPath.svg?label=PyPI&amp;color=orange&amp;style=flat-square"></a>
 <a href="https://anaconda.org/conda-forge/wslpath"><img alt="Conda" src="https://img.shields.io/conda/v/conda-forge/wslPath?label=Conda&amp;color=orange&amp;style=flat-square"></a></p>
